Controller "Cartel" and "Stock" done. DataAccess business logic added. .txt files updated. Artist and Ticket Entities updated.

--- a/TicketSalesX/TicketSalesX.csproj
+++ b/TicketSalesX/TicketSalesX.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <Folder Include="DataStorage\" />
-    <Folder Include="Business\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
