/comprar/ controller added. Festivals.txt file now update the tickets after users "buy" it /stock/ controller update the price correcty after user "buy" some of the tickets stock

--- a/TicketSalesX/appsettings.json
+++ b/TicketSalesX/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "ticketsFile": "@\"C:\\Users\\GsusM\\source\\repos\\TicketSalesX\\TicketSalesX\\DataStorage\\Tickets.txt\"",
+    "festivalsFile": "@\"C:\\Users\\GsusM\\source\\repos\\TicketSalesX\\TicketSalesX\\DataStorage\\Festivals.txt\"",
+    "artistsFile": "@\"C:\\Users\\GsusM\\source\\repos\\TicketSalesX\\TicketSalesX\\DataStorage\\Artists.txt\""
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
